Bug 826541 Suboptimal string copying in nsAttrValue::ToString r=bz